Fix calc of pin range to include wait/mutex